# mini-oss

./: .dockerignore  .gitignore
.github/workflows/: auth.yaml  core.yaml  graphql.yaml  open.yaml  rust.yaml  rust_update.yaml  stat.yaml  test.yaml  test_update.yaml  user.yaml  user_manage.yaml  web.yaml
database/: bucket.sql  core.sql  database.sql  start.sh  stat.sql  type.sql  user.sql
docker/: auth.Dockerfile  core.Dockerfile  docker-compose.yml  graphql.Dockerfile  postgres.Dockerfile  rust.Dockerfile  test.Dockerfile  user.Dockerfile  user_manage.Dockerfile
docker/docker-compose/: docker-compose.yml
docker/test/: test.Dockerfile
docker/web/: nginx.conf  web.Dockerfile
kubernetes/: auth.yaml  config.yaml  configmap.yaml  graphql.yaml  mongodb.yaml  namespace.yaml  postgresql.yaml  user_manage.yaml  web.yaml
kubernetes/test/: alpine.yaml
scripts/: docker.ps1  docker.sh  start.sh  update.sh
scripts/docker/: build.sh  push.ps1  push.sh
server/: Cargo.toml
server/common/database/: Cargo.toml
server/common/database/src/: bucket.rs  folder.rs  lib.rs  object.rs  request.rs  storage.rs  users.rs
server/common/errors/: Cargo.toml
server/common/errors/src/: lib.rs
server/common/proto/: Cargo.toml  build.rs
server/common/proto/proto/: auth.proto  core.proto  user.proto  user_manage.proto
server/common/proto/src/: lib.rs
server/common/proto/src/middleware/: client.rs  server.rs
server/common/proto/src/pre_gen/: auth.rs  core.rs  user.rs
server/common/proto/src/validation/: bucket.rs  folder.rs  mod.rs  name.rs  password.rs  path.rs
server/common/utils/: Cargo.toml
server/common/utils/src/: lib.rs
server/common/utils/src/database/: bucket.rs  folder.rs  mod.rs  object.rs  users.rs
server/common/utils/src/errors/: graphql.rs  grpc.rs  mod.rs
server/common/utils/src/mongo/: mod.rs
server/common/utils/src/validation/: check_auth.rs  claims.rs  hash.rs  jwt_decode.rs  mod.rs
server/common/validation/: Cargo.toml
server/common/validation/src/: check_auth.rs  lib.rs
server/graphql/: Cargo.toml
server/graphql/src/schema/: root.rs
server/graphql/src/utils/: error.rs  get_local_ip.rs
server/proto/: Cargo.toml  build.rs
server/proto/proto/: auth.proto
server/proto/src/: lib.rs
web/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
web/common/: package.json
web/common/src/: index.ts
web/common/src/CustomEchart/: index.tsx
web/common/src/CustomTable/: TableActions.tsx  index.tsx  useCustomTable.ts  usePage.ts
web/common/src/CustomTheme/: index.css  index.tsx
web/common/src/ErrorPage/: index.tsx
web/common/src/Stat/: Charts.tsx  DurationSelect.tsx  InfoWithNumber.tsx  index.ts
web/common/src/form/: yup.ts
web/common/src/graphql/: index.ts
web/common/src/notistack/: index.tsx
web/common/src/time/: format.ts  index.ts
web/graphql/: .graphqlconfig  apollo.config.js  codegen.yml  package.json
web/graphql/src/: index.ts  types.ts
web/graphql/src/schema/: bucket.gql  folder.gql  getName.gql  login.gql  mange.gql  object.gql  user.gql  user_mange.gql
