[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
async-graphql = "3.0.12"
axum = { version = "0.3.3", features = ["headers"] }
async-graphql-axum = "3.0.12"
