[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "time", "decimal"] }
errors = { path = "../errors", features = ["json"] }
serde_json = { version = "1.0.79", optional = true }
proto = { path = "../proto", features = ["core"] }
async-recursion = { version = "1.0.0", optional = true }
futures = { version = "0.3.21", optional = true }
num-traits = "0.2.14"

[features]
json = ["serde_json"]
future = ["futures"]
recursion = ["async-recursion"]

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }