[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "time", "decimal"] }
errors = { path = "../errors" }
serde_json = { version = "1.0.79", optional = true }
proto = { path = "../proto" }
async-recursion = { version = "1.0.0", optional = true }
futures = { version = "0.3.21", optional = true }

[features]
core = ["serde_json", "futures", "async-recursion", "proto/core", "errors/json", "proto/json"]
user = []

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
