[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
sqlx = "0.5.11"

tonic = { version = "0.6.2", optional = true }
validator = { version = "0.14.0", optional = true }

mongodb = { version = "2.1.0", optional = true }
mongodb-gridfs = { version = "0.2.2", optional = true }
blake3 = { version = "1.3.1", optional = true }

serde_json = { version = "1.0.79", optional = true }

pbkdf2 = { version = "0.10.1", optional = true }
jsonwebtoken = { version = "8.0.1", optional = true }

[features]
mongo = ["mongodb", "mongodb-gridfs", "blake3"]
json = ["serde_json"]
jwt = ["jsonwebtoken"]
password = ["pbkdf2"]
grpc = ["tonic", "validator"]
