[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tonic = "0.6.2"
async-graphql = "3.0.28"
serde = { version = "1.0.136", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }
regex = "1.5.4"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.6.2"
[features]
core = []
auth = []
user = []
default = []
