[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tonic = "0.6.2"
async-graphql = { version = "3.0.34", optional = true }

serde = { version = "1.0.136", features = ["derive"], optional = true }

validator = { version = "0.14.0", features = ["derive"], optional = true }
regex = { version = "1.5.4", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[build-dependencies]
tonic-build = "0.6.2"
[features]
core = []
user = []
validate = ["validator", "regex", "lazy_static"]
json = ["serde"]
graphql = ["async-graphql"]
core_server = ["core"]
user_server = ["user"]
core_client = ["core"]
user_client = ["user"]
