[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.1"
tonic = "0.7.1"
async-graphql = { version = "3.0.38", optional = true }

serde = { version = "1.0.137", features = ["derive"], optional = true }

validator = { version = "0.15.0", features = ["derive"], optional = true }
regex = { version = "1.5.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# client
tower = { version = "0.4.12", optional = true }
http = { version = "0.2.7", optional = true }

[build-dependencies]
tonic-build = "0.7.1"
anyhow = "1.0.57"
[features]
core = []
user = []
validate = ["validator", "regex", "lazy_static"]
json = ["serde"]
graphql = ["async-graphql"]
core_server = ["core", "server"]
user_server = ["user", "server"]
core_client = ["core", "client"]
user_client = ["user", "client"]
server = []
client = ["tower", "http"]
