[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "time"], optional = true }
tonic = { version = "0.6.2" }
jsonwebtoken = { version = "7.2.0", optional = true }
pbkdf2 = { version = "0.10.0", optional = true }
async-graphql = { version = "3.0.23", optional = true }
proto = { path = "../proto", features = ["auth"] }
serde = { version = "1.0.135", features = ["derive"] }
blake3 = { version = "1.3.0", optional = true }
futures = { version = "0.3.19", optional = true }
mongodb = { version = "2.1.0", optional = true }
mongodb-gridfs = { version = "0.2.2", optional = true }
async-recursion = { version = "1.0.0", optional = true }


[features]
default = []
sql = ["sqlx"]
mongo = ["mongodb", "mongodb-gridfs", "blake3"]
jwt = ["jsonwebtoken"]
graphql = ["async-graphql"]
future = ["futures"]
password = ["pbkdf2"]
recursion = ["async-recursion"]


[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
