[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "time","decimal"], optional = true }
tonic = "0.6.2"
jsonwebtoken = { version = "8.0.1", optional = true }
pbkdf2 = { version = "0.10.0", optional = true }
proto = { path = "../proto", features = ["auth","core","user"] }
serde = { version = "1.0.136", features = ["derive"] }
blake3 = { version = "1.3.1", optional = true }
futures = { version = "0.3.21", optional = true }
mongodb = { version = "2.1.0", optional = true }
mongodb-gridfs = { version = "0.2.2", optional = true }
async-recursion = { version = "1.0.0", optional = true }
serde_json = { version = "1.0.79", optional = true }
num-traits = "0.2.14"

[features]
default = []
sql = ["sqlx"]
mongo = ["mongodb", "mongodb-gridfs", "blake3"]
jwt = ["jsonwebtoken"]
future = ["futures"]
password = ["pbkdf2"]
recursion = ["async-recursion"]
json=["serde_json"]


[dev-dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
